<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_record" />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_name"
                android:gravity="center_vertical"
                android:layout_marginRight="16dp"/>
            
            <EditText android:id="@+id/edit1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name"
                android:inputType="text">
                <requestFocus/>
            </EditText>
            
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_qualification"
                android:gravity="center_vertical"
                android:layout_marginRight="16dp"/>
            
            <EditText android:id="@+id/edit2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_qualification"
                android:inputType="number"/>
            
        </TableRow>
        
	</TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_actions"
        android:layout_marginTop="16dp"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@android:id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginRight="16dp"
            android:text="@android:string/cancel"/>
        
        <Button android:id="@android:id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginRight="16dp"
            android:text="@string/action_save"/>
        
        <Button android:id="@android:id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/action_delete"/>
        
	</LinearLayout>
    
</LinearLayout>
